--- a/config/simulation.yaml
+++ b/config/simulation.yaml
@@ -1,10 +1,16 @@
-# Example YAML fleet configuration
-regions:
+# Example YAML simulation configuration
+zones:
   - name: central-europe
     center_lat: 48.2
     center_lon: 16.4
     radius_km: 300
-
+missions:
+  - name: surveillance-alpha
+    zone: central-europe
+    description: Recon and patrol of key areas
+  - name: cargo-beta
+    zone: central-europe
+    description: Deliver supplies between bases
 fleets:
   - name: recon-swarm
     model: small-fpv
@@ -16,7 +22,6 @@ fleets:
       failure_rate: 0.02
       speed_min_kmh: 50
       speed_max_kmh: 90
-
   - name: transport-squad
     model: medium-uav
     count: 5
@@ -27,7 +32,6 @@ fleets:
       failure_rate: 0.01
       speed_min_kmh: 80
       speed_max_kmh: 140
-
   - name: heavy-support
     model: large-uav
     count: 2
