--- a/config/simulation.yaml
+++ b/config/simulation.yaml
@@ -5,12 +5,24 @@ zones:
     center_lon: 16.4
     radius_km: 300
 missions:
-  - name: surveillance-alpha
-    zone: central-europe
-    description: Recon and patrol of key areas
-  - name: cargo-beta
-    zone: central-europe
-    description: Deliver supplies between bases
+  - id: "firewall"
+    name: "Operation: Firewall"
+    objective: "Defend the area from intrusions."
+    description: "Drones patrol the perimeter to ensure no unauthorized access."
+    region:
+      name: "central-europe"
+      center_lat: 48.2
+      center_lon: 16.4
+      radius_km: 300
+  - id: "recon"
+    name: "Operation: Recon"
+    objective: "Gather intelligence in the target area."
+    description: "Drones perform reconnaissance to collect data on enemy positions."
+    region:
+      name: "northern-border"
+      center_lat: 50.1
+      center_lon: 14.4
+      radius_km: 200
 fleets:
   - name: recon-swarm
     model: small-fpv
