Add configurable failure injection

--- a/config/simulation.yaml
+++ b/config/simulation.yaml
@@ -41,6 +41,9 @@ fleets:
       failure_rate: 0.02
       speed_min_kmh: 50
       speed_max_kmh: 90
+      sensor_error_rate: 0.01
+      dropout_rate: 0.01
+      battery_anomaly_rate: 0.01
   - name: transport-squad
     model: medium-uav
     count: 5
@@ -51,6 +54,9 @@ fleets:
       failure_rate: 0.01
       speed_min_kmh: 80
       speed_max_kmh: 140
+      sensor_error_rate: 0.01
+      dropout_rate: 0.01
+      battery_anomaly_rate: 0.01
   - name: heavy-support
     model: large-uav
     count: 2
@@ -61,3 +67,6 @@ fleets:
       failure_rate: 0.005
       speed_min_kmh: 100
       speed_max_kmh: 180
+      sensor_error_rate: 0.01
+      dropout_rate: 0.01
+      battery_anomaly_rate: 0.01
