--- a/helm/droneops-sim/values.yaml
+++ b/helm/droneops-sim/values.yaml
@@ -42,6 +42,9 @@ config:
           failure_rate: 0.02
           speed_min_kmh: 50
           speed_max_kmh: 90
+          sensor_error_rate: 0.01
+          dropout_rate: 0.01
+          battery_anomaly_rate: 0.01
       - name: transport-squad
         model: medium-uav
         count: 5
@@ -52,6 +55,9 @@ config:
           failure_rate: 0.01
           speed_min_kmh: 80
           speed_max_kmh: 140
+          sensor_error_rate: 0.01
+          dropout_rate: 0.01
+          battery_anomaly_rate: 0.01
       - name: heavy-support
         model: large-uav
         count: 2
@@ -62,6 +68,9 @@ config:
           failure_rate: 0.005
           speed_min_kmh: 100
           speed_max_kmh: 180
+          sensor_error_rate: 0.01
+          dropout_rate: 0.01
+          battery_anomaly_rate: 0.01
 
 schema:
   simulation:
@@ -86,3 +95,6 @@ schema:
           failure_rate: number
           speed_min_kmh: number
           speed_max_kmh: number
+          sensor_error_rate: number
+          dropout_rate: number
+          battery_anomaly_rate: number
