--- a/config/simulation.yaml
+++ b/config/simulation.yaml
@@ -73,3 +73,9 @@ fleets:
 
 # Minimum confidence for drones to engage follow mode
 follow_confidence: 75
+
+# Swarm response rules per movement pattern
+swarm_responses:
+  patrol: 1           # one additional drone follows
+  point-to-point: 0   # detecting drone follows
+  loiter: 2           # two drones converge
