--- a/config/simulation.yaml
+++ b/config/simulation.yaml
@@ -83,3 +83,6 @@ swarm_responses:
 # Enemy detection settings
 enemy_count: 3
 detection_radius_m: 1000
+sensor_noise: 0.05
+terrain_occlusion: 0.1
+weather_impact: 0.2
