feat: add swarm communication failover

--- a/config/simulation.yaml
+++ b/config/simulation.yaml
@@ -89,3 +89,5 @@ detection_radius_m: 1000
 sensor_noise: 0.05
 terrain_occlusion: 0.1
 weather_impact: 0.2
+communication_loss: 0.05
+bandwidth_limit: 10
