--- a/helm/droneops-sim/templates/deployment.yaml
+++ b/helm/droneops-sim/templates/deployment.yaml
@@ -19,6 +19,7 @@ spec:
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         args:
+          - "simulate"
           - "--config"
           - "/etc/{{ .Chart.Name }}/config/simulation.yaml"
           - "--schema"
