--- a/config/simulation.yaml
+++ b/config/simulation.yaml
@@ -94,3 +94,9 @@ terrain_occlusion: 0.1
 weather_impact: 0.2
 communication_loss: 0.05
 bandwidth_limit: 10
+
+telemetry:
+  detections: true
+  swarm_events: true
+  movement_metrics: true
+  simulation_state: true
