feat: make greptime database configurable

--- a/helm/droneops-sim/templates/deployment.yaml
+++ b/helm/droneops-sim/templates/deployment.yaml
@@ -27,6 +27,8 @@ spec:
         env:
         - name: GREPTIMEDB_ENDPOINT
           value: "127.0.0.1:4001"
+        - name: GREPTIMEDB_DATABASE
+          value: "metrics"
         - name: GREPTIMEDB_TABLE
           value: "drone_telemetry"
         - name: ENEMY_DETECTION_TABLE
